overflow fix

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,6 @@ body {
   -ms-overflow-style: none; /* for Internet Explorer, Edge */
   scrollbar-width: none;
   width: 100vw;
-  overflow-x: hidden;
 }
 
 html {
